# ros-rover-control

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/move_package/lib/move_package/: sistemaoperativo
install/move_package/share/ament_index/resource_index/parent_prefix_path/: move_package
install/move_package/share/move_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/come_back_home/: CMakeLists.txt  package.xml
src/come_back_home/src/: come_back_home.cpp
src/localization_node/: CMakeLists.txt  package.xml
src/localization_node/src/: localize.cpp
src/mapping_node/: CMakeLists.txt  package.xml
src/mapping_node/src/: map.cpp
src/move_package/: CMakeLists.txt
src/move_package/launch/: move_launch_1.launch.py
src/move_package/src/: To-do LIST.md  sistemaoperativo.cpp
src/navigation_node/: CMakeLists.txt  package.xml
src/navigation_node/src/: nav.cpp
src/vel_modifier/: CMakeLists.txt  package.xml
src/vel_modifier/src/: velocity_modifier.cpp
